Mon Dec 29 10:37:06 2014  Thiago Lewin  <thiago_lewin@yahoo.com.br>

	* process.c (proc_detach): [DOC] fix missing closing parenthesis.
	  [Fix GH-799]

Mon Dec 29 07:27:23 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* ext/json, test/json: merge JSON HEAD(17fe8e7)
	  https://github.com/flori/json/compare/v1.8.1...17fe8e7

Sun Dec 28 23:49:37 2014  Michal Papis  <mpapis@gmail.com>

	* rbinstall.rb: fix target location for installing bundled gems.
	  install to the prepared directory instead of default Gem.dir,
	  not to be affected GEM_HOME environment variable.  [Fix GH-798]

Sun Dec 28 18:19:28 2014  Eric Wong  <e@80x24.org>

	* test/-ext-/iseq_load/test_iseq_load.rb
	  (test_next_in_block_in_block): test using ISeq#eval
	  (test_break_ensure): ditto
	  [ruby-core:66988]

Sun Dec 28 16:25:12 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* cygwin/GNUmakefile.in (EXTOBJS): override to add resource files
	  always.  [ruby-core:67153] [Bug #10657]

Sun Dec 28 13:54:26 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (f_kwrest, new_args_tail_gen): unnamed rest keyword and
	  keywords bits arguments should be unique.  since internal IDs
	  depend on the local variable index in the current scope, new ID
	  should be made before popping those vtables.
	  [ruby-core:67157] [Bug #10659]

Sat Dec 27 20:12:55 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/json/generator/generator.c (JSON_Generator_State_type): add
	  #ifdef for backward compatibility.

	* ext/json/parser/parser.rl (JSON_Parser_type): ditto.

	* ext/json/generator/generator.h (ZALLOC): add fallback definition.

	* ext/json/parser/parser.h (ZALLOC): ditto.

Sat Dec 27 16:54:05 2014  Tanaka Akira  <akr@fsij.org>

	* process.c: Unused code removed.
	  It seems waitpid() is universaly available on POSIX platforms.

Sat Dec 27 15:08:27 2014  Eric Wong  <e@80x24.org>

	* vm_core.h (rb_vm_living_threads_insert): preserve order
	  [Bug #10660] [ruby-core:67154] [ruby-core:67159]
